fixed bug where content would be pushed down on smaller screens

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ h1 {
 
 	color: var(--font-color);
 
-	margin-top: 5%;
+	margin-top: 0;
 	margin-bottom: 0;
 }
 
